--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-@import './markdown.css';
+/* global styles */
 
 html,
 body,
@@ -10,22 +10,6 @@ body,
 
 html.dark {
   background: #121212;
-}
-
-#nprogress {
-  pointer-events: none;
-}
-
-#nprogress .bar {
-  @apply bg-teal-600 opacity-75;
-
-  position: fixed;
-  z-index: 1031;
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 2px;
 }
 
 .btn {
