--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,22 +6,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-html.dark {
+/* html.dark {
   background: #121212;
-}
-
-.btn {
-  @apply px-4 py-1 rounded inline-block
-    bg-teal-600 text-white cursor-pointer
-    hover:bg-teal-700
-    disabled:cursor-default disabled:bg-gray-600 disabled:opacity-50;
-}
-
-.icon-btn {
-  @apply inline-block cursor-pointer select-none
-    opacity-75 transition duration-200 ease-in-out
-    hover:opacity-100 hover:text-teal-600;
-  font-size: 0.9em;
-}
+} */
