--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,8 @@ body,
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* html.dark {
